Fix dark mode

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -22,7 +22,8 @@
     background-color: #242526;
 }
 
-.input {
+.input,
+.textarea {
     background-color: #fff;
 }
 
